Fixed possible NPE on setting access